tests/out/error/generics/concrete_types_not_match.in.bt
struct Foo{}

fun (f Foo) stuff[T](x T, y T) {}

fun add[Z](a Z, b Z) Z {
	return a + b
}

f := Foo{}
f.stuff([1, 2], 7) // error
f.stuff('f', 'o')

add(1, 2)
add('a', false) // error
