tests/out/error/generics/concrete_types_not_match.out
tests/out/error/generics/concrete_types_not_match.in.bt:10:8 error: type i32 not matches []i32 in argument 2
tests/out/error/generics/concrete_types_not_match.in.bt:14:4 error: type bool not matches string in argument 2
